Motion Paths are not being drawn as overlay #55796

Closed
opened 2018-07-06 16:15:52 +02:00 by Hjalti Hjálmarsson · 4 comments

System Information
Xbuntu / AMD

Blender Version
7ea26cc

Short description of error
Motion paths have always been drawn as "overlays" but now they seems to be drawn just like any other geometry, which means they easily get hidden behind geometry in the scene, rendering them hard to use at best and useless at worst.

I also checked to see if perhaps there was an option to "draw on top" and this was just a quirky default but I can't for the life of me find any option like that.

Exact steps for others to reproduce the error
New file
Animate a bone over some timespan
Go to the Armature panel
Go to Motion Paths and calculate a path
...you'll see it in the scene but not drawn on top as an overlay...

**System Information** Xbuntu / AMD **Blender Version** 7ea26cc **Short description of error** Motion paths have always been drawn as "overlays" but now they seems to be drawn just like any other geometry, which means they easily get hidden behind geometry in the scene, rendering them hard to use at best and useless at worst. I also checked to see if perhaps there was an option to "draw on top" and this was just a quirky default but I can't for the life of me find any option like that. **Exact steps for others to reproduce the error** New file Animate a bone over some timespan Go to the Armature panel Go to Motion Paths and calculate a path ...you'll see it in the scene but not drawn on top as an overlay...
Author
Member

Added subscriber: @Hjalti

Added subscriber: @Hjalti
Joshua Leung was assigned by Hjalti Hjálmarsson 2018-07-06 16:17:16 +02:00
Author
Member

PS. When you delete a path it doesn't go away but rather stays there until you refresh the rig by moving a bone.

PS. When you delete a path it doesn't go away but rather stays there until you refresh the rig by moving a bone.

This issue was referenced by 49af17beb8

This issue was referenced by 49af17beb8d2aca856ff8e23bac99841d1b45f5b
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55796
No description provided.